fixed link not wrapping bug

--- a/christian_groeber_ch/static/css/Site.css
+++ b/christian_groeber_ch/static/css/Site.css
@@ -4,6 +4,9 @@
 
 a{
     -webkit-transition: color 0.2s ease;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    word-wrap: break-word;
 }
 
 .content{
